<resources>
    <string name="app_name">麦麦</string>

    <!--Main Tab-->
    <string name="main_home_tab">主页</string>
    <string name="main_all_cusroment_tab">客户管理</string>
    <string name="main_stay_cusroment_tab">待跟进</string>
    <string name="main_order_tab">设置</string>

    <string name="title_customer">客户管理</string>
    <string name="title_todo_list">待跟进列表</string>
    <string name="title_orders">订单管理</string>
    <string name="title_search">产品查询</string>

    <array name="cusromet_details_tab_array">
        <item>基本信息</item>
        <item>负债</item>
        <item>房产</item>
        <item>保单</item>
        <item>汽车</item>
        <item>公司</item>
        <item>文件</item>
        <item>跟进明细</item>
    </array>

    <array name="statistic_dep_details_tab_array">
        <item>外呼数量</item>
        <item>接通数量</item>
        <item>意向客户</item>
        <item>预约上门</item>
    </array>


    <!--common-->
    <string name="common_back">返回</string>
    <string name="common_progress_dlg_tip">操作中...</string>

    <!--setting-->
    <string name="settings">设置</string>
    <string name="set_user_state">状态管理</string>
    <string name="set_dialing_source">拨号名单源</string>
    <string name="set_exit">退出当前账号</string>
    <string name="set_clear_rent_client">停用系统</string>
    <string name="set_userstate_online">我在线上</string>
    <string name="set_userstate_away">离开</string>
    <string name="text_userstate_busy">忙碌</string>
    <string name="text_userstate_not_disturb">请勿打扰</string>
    <string name="text_number_library_public">公共名单库</string>
    <string name="text_number_dialing_private">我的客户列表</string>

    <!--dialing-->
    <string name="dial_mute">静音</string>
    <string name="dial_mark_empty">标记空号</string>
    <string name="dial_handoff">免提</string>
    <string name="dial_stop_group">停止群呼</string>
    <string name="dial_resume_group">继续群呼</string>
    <string name="dial_cancel">取消</string>
    <string name="dial_xxx">XXX</string>
    <string name="dial_dialling">正在呼叫&#8230;</string>
    <string name="dial_requesting">请求数据中&#8230;</string>
    <string name="dial_stoped">暂停拨号&#8230;</string>
    <string name="dial_request_failed">网络故障&#8230;</string>

    <string name="dial_star_by_group">开始群呼</string>
    <string name="dial_star_by_single">点呼</string>

    <!--statistic-->
    <string name="statistic_username">员工姓名</string>
    <string name="statistic_username_hint">请输入员工姓名</string>
    <string name="statistic_date">呼叫日期</string>
    <string name="statistic_year">呼叫年份</string>
    <string name="statistic_year_hint">选择呼叫年份</string>
    <string name="statistic_date_start">呼叫日期起</string>
    <string name="statistic_date_end">呼叫日期止</string>
    <string name="statistic_out_count">外呼数量</string>
    <string name="statistic_out_count_start">外呼数量起</string>
    <string name="statistic_out_count_end">外呼数量止</string>
    <string name="statistic_connect_count">接通数量</string>
    <string name="statistic_connect_count_start">接通数量起</string>
    <string name="statistic_connect_count_end">接通数量止</string>
    <string name="statistic_reservation">预约上门数</string>
    <string name="statistic_reservation_start">预约上门数起</string>
    <string name="statistic_reservation_end">预约上门数止</string>
    <string name="statistic_connect_duration">接通时长</string>
    <string name="statistic_connect_duration_start">接通时长起</string>
    <string name="statistic_connect_duration_end">接通时长止</string>

    <string name="statistic_dep_unit">(%1$s)</string>

</resources>