<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:layout_marginBottom="@dimen/dimen_10dp"
    android:layout_height="wrap_content">

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_username"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke">

        <EditText
            android:id="@+id/edt_statistic_username"
            style="@style/filter_text_style"
            android:inputType="text"
            android:hint="@string/statistic_username_hint"/>

    </LinearLayout>

    <!--date-->
    <View style="@style/line_horizontal" />

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_statistic_date_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableRight="@mipmap/ic_date_range_black_24dp"
            style="@style/filter_text_style"
            android:hint="@string/statistic_date_start"/>

        <View
            style="@style/line_center"
            android:layout_width="@dimen/dimen_15dp"
            android:background="@color/gray_dark"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_statistic_date_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableRight="@mipmap/ic_date_range_black_24dp"
            style="@style/filter_text_style"
            android:hint="@string/statistic_date_end"/>

    </LinearLayout>

    <!--out-->
    <View style="@style/line_horizontal" />

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_out_count"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_statistic_out_start"
            style="@style/filter_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/statistic_out_count_start"/>

        <View
            style="@style/line_center"
            android:layout_width="@dimen/dimen_15dp"
            android:background="@color/gray_dark"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/edt_statistic_out_end"
            style="@style/filter_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/statistic_out_count_end"/>

    </LinearLayout>

    <!--connect-->
    <View style="@style/line_horizontal" />

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_connect_count"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_statistic_connect_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_connect_count_start"/>

        <View
            style="@style/line_center"
            android:layout_width="@dimen/dimen_15dp"
            android:background="@color/gray_dark"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/edt_statistic_connect_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_connect_count_end"/>

    </LinearLayout>

    <!--reservation-->
    <View style="@style/line_horizontal" />

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_reservation"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_statistic_reservation_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_reservation_start"/>

        <View
            style="@style/line_center"
            android:layout_width="@dimen/dimen_15dp"
            android:background="@color/gray_dark"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/edt_statistic_reservation_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_reservation_end"/>

    </LinearLayout>

    <!--duration-->
    <View style="@style/line_horizontal" />

    <TextView
        style="@style/filter_text_title"
        android:text="@string/statistic_connect_duration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:background="@color/white_smoke"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_statistic_duration_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_connect_duration_start"/>

        <View
            style="@style/line_center"
            android:layout_width="@dimen/dimen_15dp"
            android:background="@color/gray_dark"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/edt_statistic_duration_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/filter_text_style"
            android:hint="@string/statistic_connect_duration_end"/>

    </LinearLayout>


</LinearLayout>