<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_dial_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        android:src="@mipmap/ic_dial_mark_switch" />

    <TextView
        android:id="@+id/tv_dial_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="张小麦"
        android:textColor="@color/white_pure"
        android:textSize="@dimen/text_size_title_38" />

    <TextView
        android:id="@+id/tv_dial_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="正在呼叫..."
        android:textColor="@color/white_pure"
        android:textSize="@dimen/text_size_content_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_30dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_dial_mute"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_dial_mute_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/dial_mute"
                android:textColor="@color/white_pure"
                android:textSize="@dimen/text_size_content_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_dial_mark_empty"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_dial_mark_empty_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/dial_mark_empty"
                android:textColor="@color/white_pure"
                android:textSize="@dimen/text_size_content_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_dial_handoff"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_dial_handfree_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/dial_handoff"
                android:textColor="@color/white_pure"
                android:textSize="@dimen/text_size_content_18" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_dial_stop"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_dial_stop_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/dial_stop_group"
                android:textColor="@color/white_pure"
                android:textSize="@dimen/text_size_content_18" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_weight="1">
        </View>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_weight="1">
        </View>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_10dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_dial_cancel"
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_dial_mark_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/dial_cancel"
            android:textColor="@color/white_pure"
            android:textSize="@dimen/text_size_content_18" />
    </LinearLayout>

</LinearLayout>