<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TitleLayout="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_smoke"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.xiaomai.telemarket.view.widget.TitleLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        TitleLayout:titleText="@string/set_dialing_source">
    </com.xiaomai.telemarket.view.widget.TitleLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_pure"
        android:orientation="vertical"
        android:visibility="visible">

        <View style="@style/line_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp">

            <TextView
                android:id="@+id/tv_user_state_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_layout_selector"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/ic_arrow_right"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:text="@string/set_user_state"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/text_size_bottom_16"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_user_state"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_35dp"
                android:gravity="center_vertical"
                android:textColor="@color/gray_dark_mid"
                android:textSize="@dimen/text_size_bottom_14"
                android:visibility="visible" />

        </RelativeLayout>

        <View
            style="@style/line_5"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp">

            <TextView
                android:id="@+id/tv_dialing_source_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_layout_selector"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:drawableRight="@mipmap/ic_arrow_right"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_15dp"
                android:drawablePadding="@dimen/dimen_10dp"
                android:text="@string/set_dialing_source"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/text_size_bottom_16"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_dialing_source"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_35dp"
                android:gravity="center_vertical"
                android:textColor="@color/gray_dark_mid"
                android:textSize="@dimen/text_size_bottom_14"
                android:visibility="visible" />

        </RelativeLayout>

        <View
            style="@style/line_5"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Version_update"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:background="@drawable/home_layout_selector"
            android:drawableRight="@mipmap/ic_arrow_right"
            android:paddingBottom="@dimen/dimen_12dp"
            android:paddingLeft="@dimen/dimen_15dp"
            android:paddingRight="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:text="版本检测"
            android:drawablePadding="@dimen/dimen_10dp"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_bottom_16"
            android:visibility="visible" />

        <View
            style="@style/line_5"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_clear_rent_client"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:background="@drawable/home_layout_selector"
            android:paddingBottom="@dimen/dimen_12dp"
            android:paddingLeft="@dimen/dimen_15dp"
            android:paddingRight="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:text="@string/set_clear_rent_client"
            android:gravity="center"
            android:drawablePadding="@dimen/dimen_10dp"
            android:textColor="@color/red_emphasize"
            android:textSize="@dimen/text_size_bottom_16"
            android:visibility="visible" />

        <View
            style="@style/line_5"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:background="@drawable/home_layout_selector"
            android:drawablePadding="@dimen/dimen_10dp"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_12dp"
            android:paddingLeft="@dimen/dimen_15dp"
            android:paddingRight="@dimen/dimen_15dp"
            android:paddingTop="@dimen/dimen_12dp"
            android:text="@string/set_exit"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_bottom_16"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>